myweb-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-deployment
  labels:
    app: myweb
    version: new1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: matymav/matyweb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
