myweb-app/my-websvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-svc
  labels:
    app: myweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
