myweb-app/ingress-myweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ingress
  namespace: myweb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myweb.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myweb-svc
            port:
              name: http
